# postgres-sqlalchemy-alembic-template

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
project/: database.py  init_db.py
