[tool.poetry]
name = "db-template"
version = "0.1.0"
description = ""
authors = ["Jonathan Biemond <jonbiemond@gmail.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"
SQLAlchemy = "^2.0.20"
alembic = "^1.11.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
